amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-applied-but-not-declared.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-applied-but-not-declared.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-ast
  Message: Directive MyDirective is not declared
  Severity: Violation
  Target: 
  Property: 
  Range: [(1,7)-(1,43)]
  Location: 
